--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ author:
 hero:
   hero__title: Hey, I’m Angela
   hero__description: 畢業於巴黎高等商學院HEC Paris，獲得超過110萬台幣獎學金。已替學校面試將近10位來自世界各地的申請者與超過十年顧問經驗，讓我幫你申請上理想的學校。
+  hero__service: 服務內容 https://mbacafewithangela.github.io/Service/ 
+  hero__contact: 聯繫方式 https://mbacafewithangela.github.io/contact/
   hero__image: '/images/home-01.jpg'
 
 
