--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ disqus-identifier: demo-menca # Add your shortname for Disqus Comment. For examp
 
 #-------------------------------
 # Google Analytics
-google-analytics: # Add your GA Tracking Id
+google-analytics: google9a55eddc010cd29f.html# Add your GA Tracking Id
 
 
 #-------------------------------
